--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -71,13 +71,16 @@ textarea {
 
 button {
   width: 100%;
-  background: #1570ef;
-  border: 1px solid #1570ef;
   padding: 12px 20px;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
   font-weight: 600;
   margin-top: 20px;
+}
+
+.error {
+  color: red;
+  margin-top: 5px;
 }
 
 @media only screen and (max-width: 63em) {
