--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -76,11 +76,18 @@ button {
   border-radius: 8px;
   font-weight: 600;
   margin-top: 20px;
+  background: #1570ef;
+  border: 1px solid #1570ef;
 }
 
 .error {
   color: red;
   margin-top: 5px;
+}
+
+button:disabled {
+  background: #b2ddff;
+  border: 1px solid #b2ddff;
 }
 
 @media only screen and (max-width: 63em) {
